Upgrade to Java 21. Upgraded junit 4 to 5. Upgraded to latest jackson library. Split io to separate library. Dropped Apache Http for JDK.